- Updates to Operator in support of keyword based script lookup. We'd left this out entirely previously... - Closed the loophole in keyword matching logic where the keyword's shortCode could be null. Also renamed Keyword.shortCode to Keyword.channel. - Changed the default Platform type for Message from BRBL to SMS. - Fixed OperatorTest.findMatch and its test, OperatorTest.findMatchForKeyword(). - Fixed OperatorTest.processAndCheckResponse(). - Added Platform to the definition of KeywordCacheKey. - Added a LoadingCache for default scripts keyed by channel (the "to" field of an MO Message.) Still need to implement the database logic to populate it. - Added helper method, addScript(), to TestingPersistenceManager.